fix: fix index.html

--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 	<link rel="stylesheet" href="plugin/highlight/monokai.css">
 
 	<style>
-		.container {
-			display: flex;
-		}
 
 		.col {
-			flex: 1;
-
 			font-size: 36px;
 		}
 
 		.col-left {
 			text-align: left;
-			/*flex: 0 1 45%;*/
 			font-size: 36px;
 		}
 
@@ -215,7 +209,7 @@
 					<div class="col-left">
 						<p>
 							The explicit grid is the one we define with rows and columns. If we didn't define rows however grid would
-							creat implicit row tracks.
+							create implicit row tracks.
 						</p>
 						<p>
 							These will be auto sized by default.
@@ -342,11 +336,9 @@
 						body { 
 							display: grid;
 							grid-template-areas: 
-								"header header header"
-								"article nav ads"
-								"footer footer footer";
-							grid-template-rows: 60px 1fr 60px;
-							grid-template-columns: 1fr 20% 15%; 
+								"nav header header"
+								"nav article ads"
+								"nav footer ads";
 						}
 					</code></pre>
 
